--- a/templates/requirements.txt
+++ b/templates/requirements.txt
@@ -30,6 +30,7 @@ Flask-SQLAlchemy==3.0.5
 fonttools==4.43.0
 fqdn==1.5.1
 greenlet==2.0.2
+gunicorn==21.2.0
 idna==3.4
 ipykernel==6.25.2
 ipython==8.16.1
